--- a/data_ingestion/Dockerfile
+++ b/data_ingestion/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Python image from the Docker Hub
-FROM python:3.12-slim
+FROM python:3.12
 
 # Set environment variables
 ENV PYTHONUNBUFFERED 1
@@ -11,6 +11,7 @@ WORKDIR /app
 COPY requirements.txt /app/
 
 # Install the required packages
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 # Copy the rest of the application code into the container
