--- a/anomaly_detection/crca/Dockerfile
+++ b/anomaly_detection/crca/Dockerfile
@@ -12,6 +12,7 @@ COPY requirements.txt /app/
 
 # Install the required packages
 RUN pip install -r requirements.txt
+RUN python -m pip install scikit_network==0.31.0
 
 # Copy the rest of the application code into the container
 COPY . /app/
