--- a/anomaly_detection/crca/Dockerfile
+++ b/anomaly_detection/crca/Dockerfile
@@ -11,6 +11,7 @@ WORKDIR /app
 COPY requirements.txt /app/
 
 # Install the required packages
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 RUN python -m pip install scikit_network==0.31.0
 
