--- a/anomaly_detection/crca/requirements.txt
+++ b/anomaly_detection/crca/requirements.txt
@@ -1,3 +1,29 @@
+pip==24.0
+setuptools==69.2.0
+wheel==0.43.0
+numpy==1.26.4
+scipy==1.12.0
+networkx==2.6.3
+requests==2.26.0
+scikit_learn==1.4.1.post1
+tqdm==4.62.3
+matplotlib==3.5.1
+cython==3.0.10
+pytest-cov==5.0.0
+pytest==8.1.1
+pytest-runner==6.0.1
+nose==1.3.7
+ipykernel==6.29.4
+jupyter_client==8.6.1
+ipython==8.23.0
+nbsphinx==0.9.3
+Pygments==2.17.2
+sphinx-rtd-theme
+Sphinx==7.2.6
+twine==5.0.0
+torch==2.2.2
+Flask==3.0.3
+pandas==1.3.5
 alabaster==0.7.16
 amqp==5.2.0
 appnope==0.1.4
@@ -141,3 +167,5 @@ yarg==0.1.9
 zipp==3.18.1
 zope.event==5.0
 zope.interface==6.4.post2
+
+
