--- a/anomaly_detection/crca/requirements.txt
+++ b/anomaly_detection/crca/requirements.txt
@@ -15,7 +15,7 @@ pytest-runner==6.0.1
 nose==1.3.7
 ipykernel==6.29.4
 jupyter_client==8.6.1
-ipython==8.23.0
+ipython
 nbsphinx==0.9.3
 Pygments==2.17.2
 sphinx-rtd-theme
