--- a/anomaly_detection/crca/Dockerfile
+++ b/anomaly_detection/crca/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Python image from the Docker Hub
-FROM python:3.12-slim
+FROM python:3.12
 
 # Set environment variables
 ENV PYTHONUNBUFFERED 1
