--- a/data_ingestion/Dockerfile
+++ b/data_ingestion/Dockerfile
@@ -1,5 +1,5 @@
-# Use the official Python image from the Docker Hub
-FROM python:3.12-slim
+# Stage 1: Build stage
+FROM python:3.12-slim as builder
 
 # Set environment variables
 ENV PYTHONUNBUFFERED 1
@@ -11,11 +11,29 @@ WORKDIR /app
 COPY requirements.txt /app/
 
 # Install the required packages
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    && pip install --upgrade pip \
+    && pip install --no-cache-dir -r requirements.txt \
+    && apt-get remove -y build-essential \
+    && apt-get autoremove -y \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy the rest of the application code into the container
 COPY . /app/
+
+# Stage 2: Final stage
+FROM python:3.12-slim
+
+# Set environment variables
+ENV PYTHONUNBUFFERED 1
+
+# Set the working directory
+WORKDIR /app
+
+# Copy only the necessary files from the build stage
+COPY --from=builder /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
+COPY --from=builder /app /app
 
 # Define the command to run the application
 CMD ["flask", "run", "--host=0.0.0.0", "--port=5001"]
