--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,14 +16,6 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
-
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -32,12 +24,12 @@ jobs:
 
     - name: Build and push Docker images
       run: |
-        docker build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache-new -t crca_anomaly_detection:latest -f anomaly_detection/crca/Dockerfile anomaly_detection/crca/
-        docker build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache-new -t data_ingestion:latest -f data_ingestion/Dockerfile data_ingestion/
-        docker build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache-new -t data_processing:latest -f data_processing/Dockerfile data_processing/
-        docker build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache-new -t cgnn_anomaly_detection:latest -f anomaly_detection/cgnn/Dockerfile anomaly_detection/cgnn/
-        docker build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache-new -t learning_adaptation:latest -f learning_adaptation/Dockerfile learning_adaptation/
-        docker build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache-new -t django:latest -f user_interface/monitoring_project/Dockerfile user_interface/monitoring_project/
+        docker build -t crca_anomaly_detection:latest -f anomaly_detection/crca/Dockerfile anomaly_detection/crca/
+        docker build -t data_ingestion:latest -f data_ingestion/Dockerfile data_ingestion/
+        docker build -t data_processing:latest -f data_processing/Dockerfile data_processing/
+        docker build -t cgnn_anomaly_detection:latest -f anomaly_detection/cgnn/Dockerfile anomaly_detection/cgnn/
+        docker build -t learning_adaptation:latest -f learning_adaptation/Dockerfile learning_adaptation/
+        docker build -t django:latest -f user_interface/monitoring_project/Dockerfile user_interface/monitoring_project/
         docker tag crca_anomaly_detection:latest myrepo/anomaly_detection/crca:latest
         docker tag data_ingestion:latest myrepo/data_ingestion:latest
         docker tag data_processing:latest myrepo/data_processing:latest
@@ -47,12 +39,25 @@ jobs:
         docker push myrepo/anomaly_detection/crca:latest
         docker push myrepo/data_ingestion:latest
         docker push myrepo/data_processing:latest
-        docker push myrepo/anomaly_detection/cgnn:latest
+        docker push myrepo/anomaly_detection/crca:latest
         docker push myrepo/learning_adaptation:latest
         docker push myrepo/django:latest
 
-    - name: Save Docker cache
-      uses: actions/cache@v2
+    - name: Set up Kubernetes
+      uses: azure/k8s-set-context@v1
       with:
-        path: /tmp/.buildx-cache-new
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        method: kubeconfig
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+
+    - name: Deploy to Kubernetes
+      run: |
+        kubectl apply -f k8s/data_ingestion-deployment.yml
+        kubectl apply -f k8s/data_processing-deployment.yml
+        kubectl apply -f k8s/cgnn_anomaly_detection-deployment.yml
+        kubectl apply -f k8s/crca_anomaly_detection-deployment.yml
+        kubectl apply -f k8s/learning_adaptation-deployment.yml
+        kubectl apply -f k8s/learning_adaptation-celery-deployment.yml
+        kubectl apply -f k8s/crca_anomaly_detection-celery-deployment.yml
+        kubectl apply -f k8s/celery-worker-deployment.yml
+        kubectl apply -f k8s/redis-deployment.yml
+        kubectl apply -f k8s/django-deployment.yml
