--- a/data_ingestion/Dockerfile
+++ b/data_ingestion/Dockerfile
@@ -12,7 +12,7 @@ COPY requirements.txt /app/
 
 # Install the required packages
 RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code into the container
 COPY . /app/
