--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,11 +37,15 @@ jobs:
         # docker push ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest
         # docker push ${{ secrets.DOCKER_USERNAME }}/django:latest
 
+    - name: Set up kubeconfig
+      run: |
+        echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
+
     - name: Set up Kubernetes
       uses: azure/k8s-set-context@v1
       with:
         method: kubeconfig
-        kubeconfig: ${{ secrets.KUBECONFIG }}
+        kubeconfig: $HOME/.kube/config
 
     - name: Deploy to Kubernetes
       run: |
