--- a/k8s/data_ingestion_celery-deployment.yml
+++ b/k8s/data_ingestion_celery-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: celery-worker
-        image: myrepo/data_ingestion:latest
+        image: jojojochem/data_ingestion:latest
         command: ["celery", "-A", "app.celery", "worker", "--loglevel=info"]
         env:
         - name: CELERY_BROKER_URL
