--- a/anomaly_detection/crca/Dockerfile
+++ b/anomaly_detection/crca/Dockerfile
@@ -8,7 +8,7 @@ ENV PYTHONUNBUFFERED 1
 WORKDIR /app
 
 # Copy the requirements file into the container
-COPY requirements.txt /app/
+COPY requirements.txt .
 
 # Install the required packages
 RUN pip install --upgrade pip
@@ -16,7 +16,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 RUN python -m pip install --no-cache-dir scikit_network==0.31.0
 
 # Copy the rest of the application code into the container
-COPY . /app/
+COPY . .
 
 EXPOSE 5023
 # Define the command to run the application
