--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,20 +22,20 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # - name: Build and push Docker images
-    #   run: |
-    #     docker build -t jojojochem/data_ingestion:latest -f data_ingestion/Dockerfile data_ingestion/
-    #     docker build -t jojojochem/data_processing:latest -f data_processing/Dockerfile data_processing/
-    #     docker build -t jojojochem/anomaly_detection_cgnn:latest -f anomaly_detection/cgnn/Dockerfile anomaly_detection/cgnn/
-    #     docker build -t jojojochem/anomaly_detection_crca:latest -f anomaly_detection/crca/Dockerfile anomaly_detection/crca/
-    #     docker build -t jojojochem/learning_adaptation:latest -f learning_adaptation/Dockerfile learning_adaptation/
-    #     docker build -t jojojochem/monitoring_project:latest -f user_interface/monitoring_project/Dockerfile user_interface/monitoring_project/
-    #     docker push jojojochem/data_ingestion:latest
-    #     docker push jojojochem/data_processing:latest
-    #     docker push jojojochem/anomaly_detection_cgnn:latest
-    #     docker push jojojochem/anomaly_detection_crca:latest
-    #     docker push jojojochem/learning_adaptation:latest
-    #     docker push jojojochem/monitoring_project:latest
+    - name: Build and push Docker images
+      run: |
+        docker build -t jojojochem/data_ingestion:latest -f data_ingestion/Dockerfile data_ingestion/
+        docker build -t jojojochem/data_processing:latest -f data_processing/Dockerfile data_processing/
+        docker build -t jojojochem/anomaly_detection_cgnn:latest -f anomaly_detection/cgnn/Dockerfile anomaly_detection/cgnn/
+        docker build -t jojojochem/anomaly_detection_crca:latest -f anomaly_detection/crca/Dockerfile anomaly_detection/crca/
+        docker build -t jojojochem/learning_adaptation:latest -f learning_adaptation/Dockerfile learning_adaptation/
+        docker build -t jojojochem/monitoring_project:latest -f user_interface/monitoring_project/Dockerfile user_interface/monitoring_project/
+        docker push jojojochem/data_ingestion:latest
+        docker push jojojochem/data_processing:latest
+        docker push jojojochem/anomaly_detection_cgnn:latest
+        docker push jojojochem/anomaly_detection_crca:latest
+        docker push jojojochem/learning_adaptation:latest
+        docker push jojojochem/monitoring_project:latest
 
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0
@@ -43,6 +43,20 @@ jobs:
         version: 'latest'
         service_account_key: ${{ secrets.GCP_SA_KEY }}
         export_default_credentials: true
+
+    - name: Install Helm
+      run: |
+        curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+
+    - name: Add Prometheus Helm repository
+      run: |
+        helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+        helm repo update
+
+    - name: Deploy Prometheus
+      run: |
+        kubectl create namespace monitoring || true
+        helm install prometheus prometheus-community/prometheus -n monitoring
 
     - name: Install gke-gcloud-auth-plugin
       run: |
