--- a/anomaly_detection/cgnn/Dockerfile
+++ b/anomaly_detection/cgnn/Dockerfile
@@ -7,15 +7,15 @@ ENV PYTHONUNBUFFERED 1
 # Set the working directory
 WORKDIR /app
 
-# Copy the requirements file into the container
-COPY requirements.txt /app/
+# Copy the requirements file into the container first
+COPY requirements.txt .
 
 # Install the required packages
-RUN pip install --upgrade pip
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code into the container
-COPY . /app/
+COPY . .
 
 EXPOSE 5013
 
