--- a/user_interface/monitoring_project/Dockerfile
+++ b/user_interface/monitoring_project/Dockerfile
@@ -8,14 +8,14 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 
 # Copy the requirements file into the container
-COPY requirements.txt /app/
+COPY requirements.txt .
 
 # Install the required packages
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code into the container
-COPY . /app/
+COPY . .
 
 # Collect static files
 RUN python manage.py collectstatic --noinput
