--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,82 +13,56 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
     - name: Log in to Docker Hub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ github.sha }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-    - name: Build and push data_ingestion Docker image
-      uses: docker/build-push-action@v2
+    - name: Build and push
+      uses: docker/build-push-action@v6
       with:
-        context: ./data_ingestion
-        file: ./data_ingestion/Dockerfile
+        platforms: linux/amd64,linux/arm64
         push: true
-        tags: jojojochem/data_ingestion:latest
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
+        tags: ${{ secrets.DOCKER_USERNAME }}/data_ingestion:latest
 
-    - name: Build and push data_processing Docker image
-      uses: docker/build-push-action@v2
+    - name: Build and push
+      uses: docker/build-push-action@v6
       with:
-        context: ./data_processing
-        file: ./data_processing/Dockerfile
+        platforms: linux/amd64,linux/arm64
         push: true
-        tags: jojojochem/data_processing:latest
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
+        tags: ${{ secrets.DOCKER_USERNAME }}/data_processing:latest
 
-    - name: Build and push anomaly_detection_cgnn Docker image
-      uses: docker/build-push-action@v2
+    - name: Build and push
+      uses: docker/build-push-action@v6
       with:
-        context: ./anomaly_detection/cgnn
-        file: ./anomaly_detection/cgnn/Dockerfile
+        platforms: linux/amd64,linux/arm64
         push: true
-        tags: jojojochem/anomaly_detection_cgnn:latest
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
+        tags: ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_cgnn:latest
 
-    - name: Build and push anomaly_detection_crca Docker image
-      uses: docker/build-push-action@v2
+    - name: Build and push
+      uses: docker/build-push-action@v6
       with:
-        context: ./anomaly_detection/crca
-        file: ./anomaly_detection/crca/Dockerfile
+        platforms: linux/amd64,linux/arm64
         push: true
-        tags: jojojochem/anomaly_detection_crca:latest
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
+        tags: ${{ secrets.DOCKER_USERNAME }}/anomaly_detection_crca:latest
 
-    - name: Build and push learning_adaptation Docker image
-      uses: docker/build-push-action@v2
+    - name: Build and push
+      uses: docker/build-push-action@v6
       with:
-        context: ./learning_adaptation
-        file: ./learning_adaptation/Dockerfile
+        platforms: linux/amd64,linux/arm64
         push: true
-        tags: jojojochem/learning_adaptation:latest
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
+        tags: ${{ secrets.DOCKER_USERNAME }}/learning_adaptation:latest
 
-    - name: Build and push monitoring_project Docker image
-      uses: docker/build-push-action@v2
+    - name: Build and push
+      uses: docker/build-push-action@v6
       with:
-        context: ./user_interface/monitoring_project
-        file: ./user_interface/monitoring_project/Dockerfile
+        platforms: linux/amd64,linux/arm64
         push: true
-        tags: jojojochem/monitoring_project:latest
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
+        tags: ${{ secrets.DOCKER_USERNAME }}/monitoring_project:latest
 
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0
