--- a/anomaly_detection/cgnn/Dockerfile
+++ b/anomaly_detection/cgnn/Dockerfile
@@ -11,8 +11,7 @@ WORKDIR /app
 COPY requirements.txt .
 
 # Install the required packages
-RUN pip install --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code into the container
 COPY . .
