--- a/k8s/monitoring_project-deployment.yml
+++ b/k8s/monitoring_project-deployment.yml
@@ -34,7 +34,7 @@ spec:
         - name: PROMETHEUS_URL
           value: "http://prometheus-server.monitoring.svc.cluster.local:80"
         - name: CLUSTER_NAMESPACE
-          value: kube-system
+          value: "kube-system"
 ---
 apiVersion: v1
 kind: Service
