--- a/k8s/crca_anomaly_detection-celery-deployment.yml
+++ b/k8s/crca_anomaly_detection-celery-deployment.yml
@@ -22,4 +22,19 @@ spec:
           value: "redis://redis:6379/1"
         - name: CELERY_RESULT_BACKEND
           value: "redis://redis:6379/1"
-
+        livenessProbe:
+          exec:
+            command:
+            - celery
+            - inspect
+            - ping
+          initialDelaySeconds: 10
+          periodSeconds: 60
+        readinessProbe:
+          exec:
+            command:
+            - celery
+            - inspect
+            - ping
+          initialDelaySeconds: 5
+          periodSeconds: 30
