--- a/k8s/data_ingestion-deployment.yml
+++ b/k8s/data_ingestion-deployment.yml
@@ -37,3 +37,33 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 5001
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: data-ingestion-sa
+  namespace: cloudsentinel
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: cloudsentinel
+  name: pod-reader
+rules:
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list", "watch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: read-pods
+  namespace: cloudsentinel
+subjects:
+- kind: ServiceAccount
+  name: data-ingestion-sa
+  namespace: cloudsentinel
+roleRef:
+  kind: Role
+  name: pod-reader
+  apiGroup: rbac.authorization.k8s.io
