--- a/k8s/data_processing-deployment.yml
+++ b/k8s/data_processing-deployment.yml
@@ -18,7 +18,7 @@ spec:
         image: jojojochem/data_processing:latest
         ports:
         - containerPort: 5002
-
+        imagePullPolicy: Always
 ---
 apiVersion: v1
 kind: Service
