--- a/k8s/cgnn_anomaly_detection-deployment.yml
+++ b/k8s/cgnn_anomaly_detection-deployment.yml
@@ -18,6 +18,7 @@ spec:
         image: jojojochem/anomaly_detection_cgnn:latest
         ports:
         - containerPort: 5013
+        imagePullPolicy: Always
 
 ---
 apiVersion: v1
