--- a/k8s/crca_anomaly_detection-celery-deployment.yml
+++ b/k8s/crca_anomaly_detection-celery-deployment.yml
@@ -16,9 +16,10 @@ spec:
       containers:
       - name: crca-anomaly-detection-celery
         image: jojojochem/anomaly_detection_crca:latest
-        command: ["celery", "-A", "tasks.celery", "worker", "--loglevel=info", "-P", "gevent"]
+        command: ["celery", "-A", "app.celery", "worker", "--loglevel=info", "-P", "gevent"]
         env:
         - name: CELERY_BROKER_URL
           value: "redis://redis:6379/1"
         - name: CELERY_RESULT_BACKEND
           value: "redis://redis:6379/1"
+        imagePullPolicy: Always
