--- a/k8s/crca_anomaly_detection-deployment.yml
+++ b/k8s/crca_anomaly_detection-deployment.yml
@@ -23,7 +23,7 @@ spec:
           value: "redis://redis:6379/1"
         - name: CELERY_RESULT_BACKEND
           value: "redis://redis:6379/1"
-
+        imagePullPolicy: Always
 ---
 apiVersion: v1
 kind: Service
