--- a/k8s/data_ingestion-deployment.yml
+++ b/k8s/data_ingestion-deployment.yml
@@ -24,7 +24,7 @@ spec:
           value: "redis://redis:6379/0"
         - name: CELERY_RESULT_BACKEND
           value: "redis://redis:6379/0"
-
+        imagePullPolicy: Always
 ---
 apiVersion: v1
 kind: Service
