--- a/k8s/learning_adaptation-celery-deployment.yml
+++ b/k8s/learning_adaptation-celery-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: learning-adaptation-celery
-        image: jojojochem/learning_adaptation:latest
+        image: jojojochem/learning_adaptation:${COMMIT_SHA}
         imagePullPolicy: Always
         command: ["celery", "-A", "app.celery", "worker", "--loglevel=info"]
         env:
