--- a/k8s/crca_anomaly_detection-celery-deployment.yml
+++ b/k8s/crca_anomaly_detection-celery-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: crca-anomaly-detection-celery
-        image: jojojochem/anomaly_detection_crca:${COMMIT_SHA}
+        image: jojojochem/anomaly_detection_crca:latest
         imagePullPolicy: Always
         command: ["celery", "-A", "app.celery", "worker", "--loglevel=info", "-P", "gevent"]
         env:
