--- a/k8s/learning_adaptation-deployment.yml
+++ b/k8s/learning_adaptation-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: learning-adaptation
-        image: jojojochem/learning_adaptation:${COMMIT_SHA}
+        image: jojojochem/learning_adaptation:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5005
